Encapsulated result writing + images + fixes
Writing results is now handled by a different class and is handled
differently. Each dataset is now saved to an individual csv (even if the
content is not csv), as well as an results summary file.

Items collected now stores the time it was collected.

--- a/.gitignore
+++ b/.gitignore
@@ -22,7 +22,6 @@ fmod_editor.log
 
 # Unity3D generated meta files
 *.pidb.meta
-
 # Unity3D Generated File On Crash Reports
 sysinfo.txt
 
@@ -32,3 +31,5 @@ sysinfo.txt
 .DS_STORE
 desktop.ini
 ProjectSettings/ProjectVersion.txt
+# Results from the testing
+/results/
